--- a/src/componentes/FormEdit/FormEdit.css
+++ b/src/componentes/FormEdit/FormEdit.css
@@ -1,22 +1,25 @@
 .div-form-edit{
-    width: 30%;
+    width: 60%;
     position: fixed;
-    bottom: 5%;
-    left: 35%;
-    
-    background-color: #151515;
+    bottom: 30%;
+    left: 20%;
+    border-radius: 2rem;
+    height: 70vh;
 }
-.div-form-edit .formulario {
+.div-form-edit form {
     margin: 0;
+    height: 85vh;
+    padding: 0;
 }
+
 .div-form-edit .formulario form{
+
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     background-color: #151515;
-    width: 100%;
-    height: 100%;
+    min-width: 100%;
     margin: 0;
 }
 .div-form-edit .formulario form input{
@@ -45,9 +48,20 @@
     width: 80%;
     
 }
-.div-form-edit .formulario form button {
-    
-}
+
 .div-form-edit .botao{
     margin-bottom: 10px;
 }
+@media (max-width: 800px) {
+    .div-form-edit {
+      background-color: dodgerblue;
+      width: 100%;
+      left: 0%;
+    }
+    .div-form-edit .botao{
+        margin-top: 10px;
+    }
+    .div-form-edit .formulario form{
+        min-width: 95vw;
+    }
+  }
