--- a/src/componentes/formulario/Formulario.css
+++ b/src/componentes/formulario/Formulario.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     margin: 80px 0;
+    height: 90vh;
 }
 .formulario form {
     max-width: 80%;
