--- a/src/componentes/FormEdit/FormEdit.css
+++ b/src/componentes/FormEdit/FormEdit.css
@@ -56,6 +56,8 @@
     .div-form-edit {
       width: 100%;
       left: 0%;
+      height: 90vh;
+      bottom: 16%;
     }
     .div-form-edit .botao{
         margin-top: 10px;
